<resources>
    <string name="app_name">Score Keeper App</string>
    <string name="team_1">Team 1</string>
    <string name="team_2">Team 2</string>
    <string name="addFive">+5 points</string>
    <string name="addThree">+3 points</string>
    <string name="addTwo">+2 points</string>
    <string name="foul">Foul</string>
    <string name="reset">Reset</string>
    <string name="initial_value">0</string>
    <string name="initial_team_size_value">11</string>
    <string name="scoreTeam1">scoreTeam1</string>
    <string name="scoreTeam2">scoreTeam2</string>
    <string name="foulsTeam1">foulsTeam1</string>
    <string name="foulsTeam2">foulsTeam2</string>
    <string name="playersTeam1">playersTeam1</string>
    <string name="playersTeam2">playersTeam2</string>
    <string name="score">Score</string>
    <string name="fouls">Fouls</string>
    <string name="players">Players</string>
    <string name="remove_player">Remove Player</string>
</resources>